--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "webpack": "^4.39.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^3.3.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
