--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@vue/cli": "^3.10.0",
+    "prop-types": "^15.7.2",
     "webpack": "^4.39.1"
   },
   "devDependencies": {
