--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@vue/cli": "^3.10.0",
     "prop-types": "^15.7.2",
+    "react-router-dom": "^5.0.1",
     "webpack": "^4.39.1"
   },
   "devDependencies": {
