--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@vue/cli": "^3.10.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "webpack": "^4.39.1"
   },
   "devDependencies": {
