--- a/React/todolist-redux/package.json
+++ b/React/todolist-redux/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "3.1.1",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
