--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@vue/cli": "^3.10.0",
+    "eslint-utils": "^1.4.2",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
