--- a/NodeJs/server.conf
+++ b/NodeJs/server.conf
@@ -1,3 +1,8 @@
 port=12306
-path=/Users/changlifeng/Desktop/web
-path_position=absolute
+page_path=page
+static_file_type=.html|.js|.css|.jpg|.png|.gif|.ico|.json
+web_path=web
+filter_path=filter
+log_path=log/
+log_name=server.log
+file_dir=file
